--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "animate.css": "^3.7.0",
+    "aos": "2.3.4",
     "babel-core": "6.26.3",
     "babel-preset-env": "1.6.1",
+    "bootstrap": "4.3.1",
     "gulp": "3.9.1",
     "gulp-babel": "7.0.1",
     "gulp-concat": "2.6.1",
@@ -27,11 +30,9 @@
     "gulp-util": "3.0.8",
     "gulp-watch": "5.0.0",
     "gulp-webserver": "0.9.1",
-    "run-sequence": "2.2.1",
-    "bootstrap": "4.3.1",
     "jquery": "3.3.1",
     "popper.js": "1.14.7",
-    "aos": "2.3.4"
+    "run-sequence": "2.2.1"
   },
   "bugs": {
     "url": "https://github.com/GabrielCamp96/Project-Displayer-Maua/issues"
