--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "animate.css": "^3.7.0",
-    "aos": "2.3.4",
     "babel-core": "6.26.3",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "4.3.1",
     "gulp": "3.9.1",
     "gulp-babel": "7.0.1",
     "gulp-concat": "2.6.1",
     "gulp-htmlmin": "4.0.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.0",
     "gulp-uglifycss": "1.0.9",
