--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "4.0.0",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-image": "^5.0.0",
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.0",
     "gulp-uglifycss": "1.0.9",
